fluxcd/infrastructure/configs/base/gateway-api/gateway-cell-membrane.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cell-membrane-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
