fluxcd/infrastructure/configs/base/gateway-api/gateway-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: xylem-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
